Revisi bug navbar kepotong overflow header

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -8,8 +8,6 @@
 
 header {
   position: relative;
-  // height: 100vh;
-  overflow: hidden;
 }
 
 p {
